--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,18 +1,15 @@
 .Container {
-  border-top: 1px solid #aab;
   width: 100%;
-  height: 64px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: black;
-  color: #fafafa;
-
-  padding: 8px 32px;
-
+  
   footer {
+    height: 64px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 32px;
+    color: #222;
+    box-shadow: 0 0 10px  rgba(0, 0, 0, 0.6);
     width: 100%;
-    text-align: center;
   }
 }
